# resume-griller

./: .dockerignore  .env.example  .gitignore  AI_ONBOARDING.md  CLAUDE.md  DEVELOPMENT_ROADMAP.md  Dockerfile.backend  LLM_Inference.ipynb  PROJECT_STATUS.md  QUICK_WINS_COMPLETED.md  README.md  WORKTREE_WORKFLOW.md  docker-compose.yml  export_prompts.py  pyproject.toml  requirements.txt
backend/: requirements.txt  test_websocket.html
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  resume.py  session.py  voice.py  websocket.py
backend/app/core/: grilling_engine.py  interview_agent.py  logging_config.py  resume_parser.py
backend/app/db/: session_store.py
backend/app/graph/: __init__.py  builder.py  checkpointer.py  edges.py  nodes.py  services.py  state.py
backend/app/middleware/: rate_limit.py
backend/app/models/: schemas.py
backend/app/services/: llm_service.py  stt_service.py  tts_service.py
backend/resume_griller.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: exported_prompts.json
data/chromadb/: chroma.sqlite3
data/sample_resumes/: Resume1.txt  Resume2.txt  Resume3.txt  Resume4.txt
docs/: CONTRIBUTING.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/interview/[sessionId]/: page.tsx
frontend/src/app/result/[sessionId]/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/interview/: ChatMessage.tsx  InterviewRoom.tsx  VideoInterviewRoom.tsx  VoiceRecorder.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  progress.tsx
frontend/src/components/upload/: ResumeUploader.tsx
frontend/src/lib/: api.ts  utils.ts  websocket.ts
frontend/src/stores/: interviewStore.ts
frontend/src/types/: index.ts
ml/: README.md
rag/: chunker.py  embedder.py  generator.py  resume_parser.py  retriever.py
resume-griller/ml/models/interview-coach-lora/: adapter_config.json
resume-griller/resume-griller/ml/models/interview-coach-lora/: README.md
resume_griller.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: pyproject.toml  test_graph.py
tests/: test_parser.py
