[project]
name = "resume-griller"
version = "1.0.0"
description = "AI-powered interview simulator that grills candidates with resume-specific questions"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
    # RAG Pipeline
    "torch>=2.0.0",
    "pdfplumber>=0.10.0",
    "PyMuPDF>=1.23.0",
    "langchain>=0.1.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    # FastAPI Backend
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    # Async Support
    "httpx>=0.26.0",
    "aiofiles>=23.2.0",
    # LLM API Clients
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "groq>=0.37.1",
    "langgraph>=1.0.6",
    "langgraph-checkpoint-sqlite>=3.0.2",
    # Logging
    "structlog>=24.1.0",
    # Rate Limiting
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
# ML/LoRA dependencies (for local model inference)
ml = [
    "transformers>=4.36.0",
    "peft>=0.7.0",
    "accelerate>=0.25.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Explicitly specify which packages to include
packages = ["rag", "backend", "backend.app", "backend.app.api", "backend.app.api.routes", "backend.app.core", "backend.app.services", "backend.app.models", "backend.app.db"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]

# ============== Tool Configurations ==============

[tool.black]
line-length = 88
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | node_modules
    | frontend
    | data
    | ml
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]
exclude = [
    "frontend",
    "data",
    "ml",
    ".venv",
]

[tool.ruff.isort]
known-first-party = ["backend", "rag"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "frontend",
    "data",
    "ml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
